Avoid unnecessary scrollbar in main-container

--- a/prio_test2/hello/static/css/main.css
+++ b/prio_test2/hello/static/css/main.css
@@ -16,6 +16,7 @@ html, body {
     flex-basis: 100%;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .top-navigation-bar{
@@ -40,7 +41,6 @@ html, body {
     flex-basis: max-content;
     white-space: nowrap;
     flex-direction: column;
-    height: 110%;
     /* justify-content: space-between; */
 }
 
@@ -48,9 +48,9 @@ html, body {
     position: relative;
     flex-basis: 100%;
     background-color: black;
-    height: 110%;
     float: left;
     overflow: auto;
+    padding-bottom: 2%;
 }
 
 h3, label {
